compare provider service factory

--- a/web/angular/mvc.html
+++ b/web/angular/mvc.html
@@ -4,7 +4,7 @@
     <title>
       MVC
     </title>
-    <script type="text/javascript" src="angular.min.js">
+    <script type="text/javascript" src="lib/angular.min.js">
     </script>
   </head>
   <body ng-controller="TextController">
