--- a/web/angular/mvvm.html
+++ b/web/angular/mvvm.html
@@ -4,7 +4,7 @@
     <title>
       MVVM
     </title>
-    <script type="text/javascript" src="angular.min.js">
+    <script type="text/javascript" src="lib/angular.min.js">
     </script>
   </head>
   <body>
