--- a/web/vue/todos/src/index.html
+++ b/web/vue/todos/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>undefinedundefinedtodos</title>{% for (var css in o.htmlWebpackPlugin.files.css) { %}
+    <title>{%= o.htmlWebpackPlugin.options.title %}</title>{% for (var css in o.htmlWebpackPlugin.files.css) { %}
     <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">{% } %}
   </head>
   <body>
