--- a/web/angular/2.0/forts/index.html
+++ b/web/angular/2.0/forts/index.html
@@ -4,25 +4,28 @@
   <head>
     <title>Angular 2 TypeScript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+
 
     <!-- load libraries -->
     <script type="text/javascript" src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script type="text/javascript" src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script type="text/javascript" src="node_modules/systemjs/dist/system.src.js"></script>
     <script type="text/javascript" src="node_modules/angular2/bundles/angular2-polyfills.js"></script> <!-- ie required polyfill -->
-    <script type="text/javascript" src="node_modules/rxjs/bundles/Rx.umd.js"></script>
+    <script type="text/javascript" src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+    <script type="text/javascript" src="node_modules/rxjs/bundles/Rx.js"></script>
     <script type="text/javascript" src="node_modules/angular2/bundles/angular2.dev.js"></script>
 
 
     <!-- configure systemjs -->
     <script>
       System.config({
-        transpiler: 'typescript',
-        typescriptOptions: {emitDecoratorMetadata: true},
+        // transpiler: 'typescript',
+        // typescriptOptions: {emitDecoratorMetadata: true},
         packages: {
           app: {
             format: 'register',
-            defaultExtension: 'ts'
+            defaultExtension: 'js'
           }
         }
       });
